# pipeline-rag

./: .env_example  .gitignore  README.md  pyproject.toml
src/agent/schemas/: document.py  state.py
src/ai-agent/schemas/: analysis.py  document.py  query.py
src/fin_pipeline/: __init__.py  config.py  run_api.py  run_ui.py
src/fin_pipeline/agents/: base.py  financial_analyst.py  query_analyst.py  retriever.py  validator.py
src/fin_pipeline/api/: main.py
src/fin_pipeline/api/routes/: documents.py  health.py  ingest.py  query.py
src/fin_pipeline/graph/: __init__.py  builder.py  edges.py  nodes.py
src/fin_pipeline/ingestion/: chunker.py  parser.py
src/fin_pipeline/observability/: __init__.py  tracing.py
src/fin_pipeline/schemas/: __init__.py  analysis.py  api.py  document.py  query.py  state.py  storage.py  validation.py
src/fin_pipeline/storage/: embedder.py  ingest_service.py  qdrant_indexer.py
src/fin_pipeline/ui/: streamlit_app.py
tests/: test_schemas.py
