[project]
name = "pipeline-rag-financial-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling[ocr]>=2.90.0",
    "easyocr>=1.7.2",
    "fastembed>=0.8.0",
    "langchain>=0.3.0",
    "langchain-openai>=1.2.1",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "openai>=2.33.0",
    "pytest>=9.0.3",
    "qdrant-client>=1.17.1",
    "rapidocr-onnxruntime>=1.4.4",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_pipeline"]
