[project]
name = "pipeline-rag-financial-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.90.0",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-openai>=1.2.1",
    "langfuse>=4.5.1",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "openai>=2.33.0",
    "pytest>=9.0.3",
    "qdrant-client>=1.17.1",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_pipeline"]
